--- a/src/todo1/css/main.css
+++ b/src/todo1/css/main.css
@@ -16,34 +16,39 @@
 	--danger2-s: 90%;
 
 	--text: hsl(var(--base1-h), var(--base1-s), 0%);
-}
-
-a {
-	text-decoration: none;
-	color: currentColor;
+	--border: hsl(var(--base1-h), var(--base1-s), 75%);
+	--placeholder: hsl(var(--base1-h), var(--base1-s), 90%);
+	--primary-outline: hsl(var(--primary1-h), var(--primary1-s), 70%, 0.3);
+	--primary: hsl(var(--primary1-h), var(--primary1-s), 45%);
 }
 
 body {
+	min-height: 100dvh;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 	color: var(--text);
 }
 
-.page-box {
+.page-wrapper {
 	width: 100%;
 	max-width: 500px;
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
 	padding: 1rem 0;
-}
 
-.page-title {
-	width: 100%;
-	text-align: center;
-	font-size: 1.5rem;
-	font-weight: bold;
+	h1 {
+		font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
+		width: 100%;
+		text-align: center;
+		font-size: 3rem;
+		font-weight: bold;
+		text-shadow:
+			0px 4px 3px rgba(0, 0, 0, 0.4),
+			0px 8px 13px rgba(0, 0, 0, 0.1),
+			0px 18px 23px rgba(0, 0, 0, 0.1);
+	}
 }
 
 .btn {
@@ -104,14 +109,6 @@ body {
 	}
 }
 
-.form-input {
-	--input-border: hsl(var(--base1-h), var(--base1-s), 75%);
-	--input-placeholder: hsl(var(--base1-h), var(--base1-s), 90%);
-	--input-focus-border: hsl(var(--primary1-h), var(--primary1-s), 45%);
-	--input-focus-outline: hsl(var(--primary1-h), var(--primary1-s), 70%, 0.3);
-	--primary: hsl(var(--primary1-h), var(--primary1-s), 45%);
-}
-
 .create-form {
 	width: 100%;
 	display: flex;
@@ -132,29 +129,19 @@ body {
 .form-input {
 	border-radius: 0.2rem;
 	padding: 0.2rem 0.5rem;
-	border: solid 1px var(--input-border);
+	border: solid 1px var(--border);
 
 	&::placeholder {
-		color: var(--input-placeholder);
+		color: var(--placeholder);
 	}
 
 	&:focus {
-		border: solid 1px var(--input-focus-border);
-		outline: 4px solid var(--input-focus-outline);
+		border: solid 1px var(--primary);
+		outline: 4px solid var(--primary-outline);
 	}
 }
 
-.todo-list-wrapper,
-.todo-detail-wrapper {
-	--border: hsl(var(--base1-h), var(--base1-s), 75%);
-	--input-focus-border: hsl(var(--primary1-h), var(--primary1-s), 45%);
-	--input-focus-outline: hsl(var(--primary1-h), var(--primary1-s), 70%, 0.3);
-	--primary: hsl(var(--primary1-h), var(--primary1-s), 45%);
-}
-
 .empty-data {
-	--border: hsl(var(--base1-h), var(--base1-s), 75%);
-
 	border: solid 1px var(--border);
 	text-align: center;
 	padding: 1rem;
@@ -177,6 +164,12 @@ body {
 			gap: 1rem;
 			border-bottom: solid 1px var(--border);
 
+			&:has(input[type='checkbox']:checked) {
+				& span {
+					text-decoration: line-through;
+				}
+			}
+
 			& span {
 				flex-grow: 1;
 			}
@@ -190,8 +183,8 @@ body {
 				border: solid 1px var(--border);
 
 				&:focus {
-					border: solid 1px var(--input-focus-border);
-					outline: 4px solid var(--input-focus-outline);
+					border: solid 1px var(--primary);
+					outline: 4px solid var(--primary-outline);
 				}
 			}
 
@@ -217,10 +210,11 @@ body {
 .todo-detail-wrapper {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 2rem;
 
 	& table {
 		width: 100%;
+		border-collapse: collapse;
 
 		& tr {
 			height: 40px;
@@ -232,5 +226,12 @@ body {
 			text-align: left;
 			padding-right: 1rem;
 		}
+	}
+
+	& .buttons {
+		width: 100%;
+		display: flex;
+		gap: 0.5rem;
+		justify-content: center;
 	}
 }
