--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -168,27 +168,30 @@ svg {
 	line-height: 1;
 }
 
-.sidebar-menu {
-	padding: 1rem;
+#sidebar-menu {
+	padding: 0 0.5rem;
 }
 
-.sidebar-menu li a {
+#sidebar-menu .folder {
 	display: block;
-	height: 38px;
-	line-height: 38px;
+	padding: 0.5rem 1rem;
 	text-transform: uppercase;
-	text-align: center;
-	font-size: 1rem;
-	border-radius: 0.2rem;
-	margin-bottom: 0.2rem;
-	border: solid 1px var(--border);
-	color: var(--light-text);
+	font-weight: bolder;
+	letter-spacing: 1px;
+	background-color: hsl(var(--base1-h), var(--base1-s), 85%);
 }
 
-.sidebar-menu li a:hover {
-	color: var(--darker-primary);
-	border: solid 1px var(--primary);
-	background-color: var(--light-primary);
+#sidebar-menu ul:has(.file) {
+	background-color: hsl(var(--base1-h), var(--base1-s), 75%);
+}
+
+#sidebar-menu ul:has(.file) li:not(:last-child) .file {
+	border-bottom: solid 1px hsl(var(--base1-h), var(--base1-s), 80%);
+}
+
+#sidebar-menu .file {
+	display: block;
+	padding: 0.5rem 1rem;
 }
 
 @media (min-width: 1024px) {
@@ -320,7 +323,8 @@ main {
 	align-items: center;
 	gap: 1rem;
 	text-transform: uppercase;
-	font-size: 1.5rem;
+	font-size: 1.3rem;
+	font-weight: lighter;
 	line-height: 1;
 }
 
@@ -339,16 +343,207 @@ main {
 	background-color: var(--light-primary);
 }
 
-.detail-preview {
+.detail-preview-wrapper {
 	flex-grow: 1;
 	display: flex;
 	padding: 1rem;
 }
 
+.detail-preview {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.detail-preview .toolbar {
+	height: 50px;
+	border: solid 1px var(--border);
+	border-bottom: none;
+	display: flex;
+	padding: 0 0.5rem;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 0.5rem 0.5rem 0 0;
+}
+
+.detail-preview .toolbar .toolbar-menu {
+	display: flex;
+	gap: 0.25rem;
+	color: var(--border);
+}
+
+.detail-preview .toolbar .toolbar-menu svg {
+	width: 20px;
+	height: auto;
+}
+
+.detail-preview .toolbar h5 {
+	background-color: var(--light-bg);
+	display: inline-block;
+	font-size: 0.85rem;
+	padding: 0.2rem 2rem;
+	border-radius: 0.2rem;
+}
+
 .detail-preview iframe {
 	flex-grow: 1;
-	height: 100%;
 	overflow: hidden;
 	border: solid 1px var(--border);
+	border-radius: 0 0 0.5rem 0.5rem;
+	transform: scale(0.75);
+	transform-origin: 0 0;
+	min-width: 133.33%;
+	height: 133.33%;
+}
+
+.detail-message {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: solid 1px var(--border);
 	border-radius: 0.2rem;
+}
+
+.tabs {
+	width: 100%;
+	height: 100%;
+	padding: 1rem;
+}
+
+.tabs > input {
+	display: none;
+}
+
+.tabs > label {
+	display: block;
+	float: left;
+	padding: 12px 20px;
+	margin-left: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+	background-color: #ddd;
+	width: 120px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.tabs > label:hover,
+.tabs > input:checked + label {
+	background: #4ec6de;
+}
+
+.tab-content {
+	clear: both;
+	perspective: 600px;
+}
+
+.tab-content > div {
+	width: 100%;
+	position: absolute;
+	border: 2px solid #4ec6de;
+	padding: 10px 30px 40px;
+	line-height: 1.4em;
+	opacity: 0;
+	transform: rotateX(-20deg);
+	transform-origin: top center;
+	transition:
+		opacity 0.3s,
+		transform 1s;
+	z-index: 0;
+}
+
+#tab-nav-1:checked ~ .tab-content > div:nth-of-type(1),
+#tab-nav-2:checked ~ .tab-content > div:nth-of-type(2) {
+	transform: rotateX(0);
+	opacity: 1;
+	z-index: 1;
+}
+
+.hljs {
+	overflow: auto;
+}
+
+.hljs h1,
+.hljs h2,
+.hljs h3,
+.hljs h4,
+.hljs h5 {
+	word-wrap: break-word;
+	line-height: 1;
+}
+
+.hljs h1 {
+	font-size: 2rem;
+	font-weight: bold;
+	display: block;
+	text-align: center;
+	padding: 1rem 0.5rem 2rem 0.5rem;
+	font-family: 'Archivo Black', serif;
+	font-weight: 400;
+	font-style: normal;
+	letter-spacing: -1px;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-shadow:
+		2px 8px 6px rgba(0, 0, 0, 0.2),
+		0px -5px 35px rgba(255, 255, 255, 0.3);
+}
+
+.hljs h2 {
+	font-size: 1.3rem;
+	font-weight: bold;
+	margin: 1rem 0;
+}
+
+.hljs h3 {
+	font-size: 1.1rem;
+	font-weight: bold;
+	margin: 1rem 0;
+}
+
+.hljs ::marker {
+	content: counters(list-item, '.') '.';
+	font-size: 0.85rem;
+}
+
+.hljs a {
+	color: var(--text);
+	font-weight: 400;
+
+	&:hover {
+		color: var(--primary);
+	}
+}
+
+.hljs ol,
+.hljs ul {
+	list-style: decimal;
+	margin: 0.5rem 0;
+	padding: 0 0 0 1rem;
+
+	.hljs li {
+		padding: 0 0 0 0.5rem;
+
+		.hljs ol,
+		.hljs ul {
+			margin-bottom: 0;
+
+			.hljs li {
+				font-size: 0.9rem;
+			}
+		}
+	}
+}
+
+.hljs p {
+	margin: 0.5rem 0;
+}
+
+.hljs img {
+	border-radius: 0.5rem;
+	border: solid 1px var(--border);
+	background-color: var(--bg);
 }
