--- a/src/views/detail-file.hbs
+++ b/src/views/detail-file.hbs
@@ -1,16 +1,26 @@
 {{#if pathName}}
-<div class="tabs">
-    <input type="radio" name="tabs" id="tab-nav-1" checked>
-    <label for="tab-nav-1">Code</label>
-    <input type="radio" name="tabs" id="tab-nav-2">
-    <label for="tab-nav-2">Preview</label>
-    <div class="tab-content">
-        <div class="hljs">
-            <pre><code>{{{fileContent}}}</code></pre>
-        </div>
-        <div>
-            <div class="detail-preview">
-                <iframe id="preview" src="{{pathName}}"></iframe>
+<div class="main-content">
+    <div class="tabs">
+        <input type="radio" name="tabs" id="tab-nav-1" checked>
+        <label for="tab-nav-1">Code</label>
+        <input type="radio" name="tabs" id="tab-nav-2">
+        <label for="tab-nav-2">Preview</label>
+        <div class="tab-content">
+            <div class="hljs">
+                <pre><code>{{{fileContent}}}</code></pre>
+            </div>
+            <div class="detail-preview-wrapper">
+                <div class="detail-preview">
+                    <div class="toolbar">
+                        <h5 id="toolbar-url">{{pathName}}</h5>
+                        <div class="toolbar-menu">
+                            {{> circle-icon}}
+                            {{> circle-icon}}
+                            {{> circle-icon}}
+                        </div>
+                    </div>
+                    <iframe id="preview" src="{{pathName}}"></iframe>
+                </div>
             </div>
         </div>
     </div>
