add language switcher

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -167,6 +167,12 @@ svg {
 	font-weight: lighter;
 }
 
+.sidebar .header-menu {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 @media (min-width: 1024px) {
 	.sidebar,
 	.sidebar-active .sidebar {
