--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,44 +1,16 @@
-:root {
-	--sidebar-width: 300px;
-
-	--spacing: 0.25rem;
-	--base1-h: 210;
-	--base1-s: 15%;
-	--base2-h: 210;
-	--base2-s: 5%;
-
-	--primary1-h: 200;
-	--primary1-s: 90%;
-	--primary2-h: 230;
-	--primary2-s: 90%;
-
-	--danger1-h: 0;
-	--danger1-s: 80%;
-	--danger2-h: 5;
-	--danger2-s: 90%;
-
-	--text: hsl(var(--base1-h), var(--base1-s), 0%);
-	--light-text: hsl(var(--base1-h), var(--base1-s), 40%);
-	--bg: hsl(var(--base1-h), var(--base1-s), 100%);
-	--light-bg: hsl(var(--base1-h), var(--base1-s), 95%);
-	--border: hsl(var(--base1-h), var(--base1-s), 85%);
-	--placeholder: hsl(var(--base1-h), var(--base1-s), 90%);
-	--primary-outline: hsl(var(--primary1-h), var(--primary1-s), 70%, 0.3);
-	--primary: hsl(var(--primary1-h), var(--primary1-s), 35%);
-	--darker-primary: hsl(var(--primary1-h), var(--primary1-s), 30%);
-	--light-primary: hsl(var(--primary1-h), var(--primary1-s), 90%);
-	--overlay-bg: hsl(var(--base1-h), var(--base1-s), 0%, 0.1);
-}
-
 body {
 	position: relative;
 	display: flex;
 	color: var(--text);
-	background-color: hsl(0deg 0% 93.7%);
+	background-color: var(--bg);
 }
 
-a:hover {
-	color: var(--primary);
+a {
+	color: var(--text);
+
+	&:hover {
+		color: var(--primary);
+	}
 }
 
 svg {
@@ -64,19 +36,20 @@ svg {
 	position: fixed;
 	width: 50px;
 	height: 50px;
-	z-index: 199;
-	top: 10px;
-	right: 10px;
+	z-index: 10;
+	top: 2px;
+	left: 2px;
 	border-radius: 0.2rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: hsl(var(--base-500), 0.1);
 	backdrop-filter: blur(20px);
 }
 
 .toggle-menu:hover {
-	color: var(--primary);
-	background-color: hsl(var(--primary1-h), var(--primary1-s), 90%);
+	color: hsl(var(--primary-600));
+	background-color: hsl(var(--primary-500), 0.1);
 }
 
 .toggle-menu svg {
@@ -97,7 +70,7 @@ svg {
 	transition: all 0.3s ease-in-out;
 	visibility: hidden;
 	opacity: 0;
-	background-color: #fff;
+	background-color: var(--bg);
 	border-right: solid 1px var(--border);
 }
 
@@ -171,6 +144,7 @@ svg {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	gap: 0.5rem;
 }
 
 @media (min-width: 1024px) {
@@ -190,30 +164,20 @@ svg {
 	}
 }
 
-main {
-	position: relative;
+.main {
 	flex-grow: 1;
-	height: 100dvh;
-	display: flex;
-	flex-direction: column;
+	min-height: 100dvh;
 	overflow: auto;
+	background-color: var(--light-bg);
+	padding: 1rem;
 }
 
-.main-content {
-	width: 100%;
-	height: 100%;
-	padding: 1.5rem 1rem 1rem 1rem;
-}
-
-.container {
-	width: 100%;
-	height: 100%;
-}
-
-.container.center {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.content {
+	border-radius: 0.2rem;
+	padding: 1rem;
+	min-height: 100%;
+	background-color: var(--bg);
+	border: solid 1px var(--border);
 }
 
 .home {
@@ -338,6 +302,7 @@ main {
 }
 
 .detail-preview {
+	min-height: 500px;
 	min-width: 133.33%;
 	height: 133.33%;
 	display: flex;
@@ -391,4 +356,58 @@ main {
 	align-items: center;
 	border: solid 1px var(--border);
 	border-radius: 0.2rem;
+}
+
+.color-list {
+	--item-shadow: hsl(var(--base-500), 0.5) 0px 2px 4px;
+	--item-height: 30px;
+
+	padding: 1rem;
+	display: flex;
+	gap: 0.5rem;
+
+	& .color-group {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 0.5rem;
+	}
+
+	& .color-item {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 0.5rem;
+
+		& label {
+			width: 40px;
+			height: var(--item-height);
+			line-height: var(--item-height);
+			text-align: right;
+			font-size: 0.75rem;
+		}
+
+		& label.center {
+			width: 80px;
+			text-align: center;
+		}
+
+		& span {
+			display: inline-block;
+			width: 80px;
+			border: solid 1px var(--border);
+			height: var(--item-height);
+			box-shadow: var(--item-shadow);
+		}
+	}
+}
+
+.dark .color-list {
+	--item-shadow: hsl(var(--base-500), 0.5) 0px 2px 4px;
+}
+
+.css-variables {
+	width: 100%;
+	border: solid 1px var(--border);
 }
