--- a/src/assets/css/tabs.css
+++ b/src/assets/css/tabs.css
@@ -9,10 +9,11 @@
 
 .tabs > label {
 	display: inline-block;
-	margin-left: 5px;
+	margin: 0 5px 5px 0;
 	cursor: pointer;
 	transition: background-color 0.3s;
-	background-color: var(--light-bg);
+	background-color: hsl(var(--base-100));
+	border: solid 1px hsl(var(--base-200));
 	width: 120px;
 	height: 40px;
 	line-height: 40px;
@@ -24,30 +25,29 @@
 .tabs > input:checked + label {
 	background: var(--primary);
 	color: var(--light-primary);
+	border: solid 1px hsl(var(--primary-600));
 }
 
 .tab-content {
 	display: flex;
-	min-height: calc(100% - 2rem);
+	min-height: calc(100% - 2.5rem);
 }
 
 .tab-content > div {
 	min-height: 100%;
-	border: 1px solid var(--border);
-	background-color: #fff;
 	padding: 0;
 	width: 0;
 	height: 0;
 	overflow: hidden;
 	opacity: 0;
+	border: 1px solid var(--border);
+	background-color: var(--bg);
 }
 
 #tab-nav-1:checked ~ .tab-content > div:nth-of-type(1),
 #tab-nav-2:checked ~ .tab-content > div:nth-of-type(2) {
 	padding: 1rem;
-	min-height: calc(100% - 100px);
 	height: auto;
 	width: 100%;
 	opacity: 1;
-	margin-bottom: 1rem;
 }
