--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,14 +1,12 @@
-<div class="container center">
-    <div class="home">
-        <h1>Simple HTML, CSS Template</h1>
-        <p>by</p>
-        <h3>
-            {{> author-icon}}
-            <a href="https://portfolio.marmeam.com/">Ferry L. H.</a>
-        </h3>
-        <h2>
-            {{> git-icon}}
-            <a href="https://github.com/ferrylinton/web-templates/tree/main/src">Source Code</a>
-        </h2>
-    </div>
+<div class="content home">
+    <h1>Simple HTML, CSS Template</h1>
+    <p>by</p>
+    <h3>
+        {{> author-icon}}
+        <a href="https://portfolio.marmeam.com/">Ferry L. H.</a>
+    </h3>
+    <h2>
+        {{> git-icon}}
+        <a href="https://github.com/ferrylinton/web-templates/tree/main/src">Source Code</a>
+    </h2>
 </div>
